force-app/main/default/objects/Contact/fields/ActiveKerb__c.field-meta.xml
<CustomField>
    <fullName>ActiveKerb__c</fullName>
    <formula>OR(MoiraStatus__c == &apos;1&apos;, MoiraStatus__c == &apos;9&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Kerb?</label>
    <type>Checkbox</type>
</CustomField>