force-app/main/default/objects/Contact/fields/AltEmail__c.field-meta.xml
<CustomField>
    <fullName>AltEmail__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>