force-app/main/default/objects/Contact/fields/AlumniEmail__c.field-meta.xml
<CustomField>
    <fullName>AlumniEmail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Alumni Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>