force-app/main/default/objects/Contact/fields/Contact_Recid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Recid__c</fullName>
    <externalId>true</externalId>
    <label>Forrester Contact RecID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>