force-app/main/default/objects/Contact/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <formula>IF( ISBLANK( PreferredName__c ), TRIM( FirstName + &apos; &apos; + MiddleName + &apos; &apos; + LastName ), TRIM( PreferredName__c + &apos; &apos; +  LastName ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>