force-app/main/default/objects/Contact/fields/GovernmentEmployeeStatus__c.field-meta.xml
<CustomField>
    <fullName>GovernmentEmployeeStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Employee Status</label>
    <type>Checkbox</type>
</CustomField>