force-app/main/default/objects/Contact/fields/HHMI_Current__c.field-meta.xml
<CustomField>
    <fullName>HHMI_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HHMI</label>
    <type>Checkbox</type>
</CustomField>