force-app/main/default/objects/Contact/fields/HHMI_Current_Date_From__c.field-meta.xml
<CustomField>
    <fullName>HHMI_Current_Date_From__c</fullName>
    <label>Current date of Tenure (from)</label>
    <type>Date</type>
</CustomField>