force-app/main/default/objects/Contact/fields/InvitationCode__c.field-meta.xml
<CustomField>
    <fullName>InvitationCode__c</fullName>
    <externalId>true</externalId>
    <label>Invitation Code</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>