force-app/main/default/objects/Contact/fields/IsAlumni__c.field-meta.xml
<CustomField>
    <fullName>IsAlumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alumni?</label>
    <type>Checkbox</type>
</CustomField>