force-app/main/default/objects/Contact/fields/MoiraStatus__c.field-meta.xml
<CustomField>
    <fullName>MoiraStatus__c</fullName>
    <label>Moira Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>