force-app/main/default/objects/Contact/fields/OldEmail__c.field-meta.xml
<CustomField>
    <fullName>OldEmail__c</fullName>
    <label>Old Email</label>
    <type>Email</type>
</CustomField>