force-app/main/default/objects/Contact/fields/TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The TLO Contact object that this Person Account replaces</description>
    <label>TLO Contact</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Person_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>