force-app/main/default/objects/Contact/fields/VaAppointmentDetails__c.field-meta.xml
<CustomField>
    <fullName>VaAppointmentDetails__c</fullName>
    <label>VA appointment details</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>